comments overflow fix

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -77,7 +77,7 @@ body {
 @media only screen and (max-width: 451px) {
   .main_flexbox__item2 {
     width: 100vw;
-    max-height: 40vh;
+    max-height: 30vh;
     overflow-y: scroll;
   }
 }
